--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.0",
     "psycopg[binary]>=3.2.12",
+    "pydantic-settings>=2.11.0",
     "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.44",
     "uvicorn[standard]>=0.38.0",
