--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.17.1",
     "fastapi>=0.121.0",
     "psycopg[binary]>=3.2.12",
     "pydantic-settings>=2.11.0",
