--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.17.1",
+    "asyncpg>=0.30.0",
     "fastapi>=0.121.0",
     "psycopg[binary]>=3.2.12",
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.2.1",
-    "sqlalchemy>=2.0.44",
+    "sqlalchemy[asyncio]>=2.0.44",
     "uvicorn[standard]>=0.38.0",
 ]
 
